# PQC-VPN-Android

./: README.md  build.gradle.kts  build_log.txt  build_log_stacktrace.txt  build_log_verbose_aapt.txt  gradle.properties  my-keystore.jks  openvpn-final.apk.idsig
gradle/: libs.versions.toml
main/: build.gradle.kts
main/scripts/: install_pqc.sh  install_pqc_android.sh
main/src/main/: AndroidManifest.xml
main/src/main/cpp/: CMakeLists.txt  jnicommon.c  jnicommon.h  vpn-api.c
openvpn-src/: AndroidManifest.xml  apktool.yml
openvpn-src/assets/arm64-v8a/: openssl.cnf
openvpn-src/lib/arm64-v8a/: openvpn
openvpn-src/original/: AndroidManifest.xml
openvpn-src/res/color/: tab_text.xml
openvpn-src/res/drawable/: ic_launcher_background.xml  ic_notification.xml  ic_stat_vpn.xml
openvpn-src/res/layout/: activity_pqc_vpn.xml
openvpn-src/res/mipmap-anydpi-v26/: ic_launcher_round.xml
openvpn-src/res/values/: arrays.xml  attrs.xml  bools.xml  colors.xml  dimens.xml  ids.xml  plurals.xml  public.xml  strings.xml  styles.xml
openvpn-src/res/values-af/: strings.xml
openvpn-src/res/values-am/: strings.xml
openvpn-src/res/values-ar/: strings.xml
openvpn-src/res/values-as/: strings.xml
openvpn-src/res/values-az/: strings.xml
openvpn-src/res/values-b+sr+Latn/: strings.xml
openvpn-src/res/values-be/: strings.xml
openvpn-src/res/values-bg/: strings.xml
openvpn-src/res/values-bn/: strings.xml
openvpn-src/res/values-bs/: strings.xml
openvpn-src/res/values-ca/: strings.xml
openvpn-src/res/values-cs/: strings.xml
openvpn-src/res/values-da/: strings.xml
openvpn-src/res/values-de/: strings.xml
openvpn-src/res/values-el/: strings.xml
openvpn-src/res/values-en-rGB/: strings.xml
openvpn-src/res/values-es/: strings.xml
openvpn-src/res/values-es-rUS/: strings.xml
openvpn-src/res/values-et/: strings.xml
openvpn-src/res/values-eu/: strings.xml
openvpn-src/res/values-fa/: strings.xml
openvpn-src/res/values-fi/: strings.xml
openvpn-src/res/values-fr/: strings.xml
openvpn-src/res/values-fr-rCA/: strings.xml
openvpn-src/res/values-gl/: strings.xml
openvpn-src/res/values-gu/: strings.xml
openvpn-src/res/values-hi/: strings.xml
openvpn-src/res/values-hr/: strings.xml
openvpn-src/res/values-hu/: strings.xml
openvpn-src/res/values-hy/: strings.xml
openvpn-src/res/values-in/: strings.xml
openvpn-src/res/values-is/: strings.xml
openvpn-src/res/values-it/: strings.xml
openvpn-src/res/values-iw/: strings.xml
openvpn-src/res/values-ja/: strings.xml
openvpn-src/res/values-ka/: strings.xml
openvpn-src/res/values-kk/: strings.xml
openvpn-src/res/values-km/: strings.xml
openvpn-src/res/values-kn/: strings.xml
openvpn-src/res/values-ko/: strings.xml
openvpn-src/res/values-ky/: strings.xml
openvpn-src/res/values-lo/: strings.xml
openvpn-src/res/values-lt/: strings.xml
openvpn-src/res/values-lv/: strings.xml
openvpn-src/res/values-mk/: strings.xml
openvpn-src/res/values-ml/: strings.xml
openvpn-src/res/values-mn/: strings.xml
openvpn-src/res/values-mr/: strings.xml
openvpn-src/res/values-ms/: strings.xml
openvpn-src/res/values-my/: strings.xml
openvpn-src/res/values-nb/: strings.xml
openvpn-src/res/values-ne/: strings.xml
openvpn-src/res/values-nl/: strings.xml
openvpn-src/res/values-or/: strings.xml
openvpn-src/res/values-pa/: strings.xml
openvpn-src/res/values-pl/: strings.xml
openvpn-src/res/values-pt/: strings.xml
openvpn-src/res/values-pt-rBR/: strings.xml
openvpn-src/res/values-pt-rPT/: strings.xml
openvpn-src/res/values-ro/: strings.xml
openvpn-src/res/values-ru/: strings.xml
openvpn-src/res/values-si/: strings.xml
openvpn-src/res/values-sk/: strings.xml
openvpn-src/res/values-sl/: strings.xml
openvpn-src/res/values-sq/: strings.xml
openvpn-src/res/values-sr/: strings.xml
openvpn-src/res/values-sv/: strings.xml
openvpn-src/res/values-sw/: strings.xml
openvpn-src/res/values-ta/: strings.xml
openvpn-src/res/values-te/: strings.xml
openvpn-src/res/values-th/: strings.xml
openvpn-src/res/values-tl/: strings.xml
openvpn-src/res/values-tr/: strings.xml
openvpn-src/res/values-uk/: strings.xml
openvpn-src/res/values-ur/: strings.xml
openvpn-src/res/values-uz/: strings.xml
openvpn-src/res/values-vi/: strings.xml
openvpn-src/res/values-zh-rCN/: strings.xml
openvpn-src/res/values-zh-rHK/: strings.xml
openvpn-src/res/values-zh-rTW/: strings.xml
openvpn-src/res/values-zu/: strings.xml
openvpn-src/res/xml/: app_restrictions.xml
openvpn-src/smali/androidx/activity/: ComponentActivity$ReportFullyDrawnExecutorImpl.smali  ComponentActivity$activityResultRegistry$1.smali  ComponentActivity$onBackPressedDispatcher$2.smali  ComponentActivity.smali  EdgeToEdge.smali  EdgeToEdgeApi21.smali  EdgeToEdgeApi23.smali  EdgeToEdgeApi26.smali  EdgeToEdgeApi29.smali  EdgeToEdgeBase.smali  FullyDrawnReporter.smali  FullyDrawnReporterKt.smali  ImmLeaksCleaner.smali  OnBackPressedDispatcher.smali  PipHintTrackerKt$trackPipAnimationHintView$flow$1.smali  SystemBarStyle$Companion.smali
openvpn-src/smali/androidx/collection/: LruCacheKt.smali
openvpn-src/smali/androidx/lifecycle/: CoroutineLiveDataKt.smali  DispatchQueue.smali  FlowLiveDataConversions$asFlow$1.smali  FlowLiveDataConversions.smali  LifecycleRegistry.smali  Lifecycling.smali  SavedStateHandle.smali  SavedStateHandleController.smali  Transformations.smali  ViewModelLazy.smali  WithLifecycleStateKt.smali
openvpn-src/smali/androidx/preference/: PreferenceHeaderFragmentCompat.smali  PreferenceInflater.smali
openvpn-src/smali/kotlin/: ExceptionsKt__ExceptionsKt.smali  ULong.smali
openvpn-src/smali_classes10/okhttp3/: CertificatePinner$Pin.smali  Cookie$Companion.smali  HttpUrl$Builder.smali  MultipartReader.smali  OkHttpClient$Builder.smali  OkHttpClient.smali  Request$Builder.smali
openvpn-src/smali_classes10/okio/: Buffer.smali  CipherSink.smali  DeflaterSink.smali  GzipSource.smali  JvmFileHandle.smali  NioFileSystemFileHandle.smali  Options$Companion.smali  Timeout.smali  Utf8.smali
(+1210 files in other folders)
